style/ui.css
#enclosingDiv
{
	z-index: 1000;
	position: fixed;
	left: 15px;
	top: 60px;
	width: 300px;
	height: 550px;
	overflow: hidden;
	box-shadow: 5px 10px 20px rgba(50,50,50,0.3);
	border-radius: 5px;
	opacity: 0.95;
	box-shadow: 5px 10px 20px rgba(30,30,30,0.8);
}

#progressContainer
{
	z-index: 1000;
	position: fixed;
	left:315px;
	top:60px;
	width:0px;
	background-color: rgba(100,100,100,0.3);
	border-radius: 5px; 
	height:550px;
	opacity: 0.95;
	overflow-x:hidden;
	overflow-y:scroll;
}

.progress
{
	position: relative;

	vertical-align: center;
	text-align: center;
	width:282px;
	height:21px;
	line-height: 23px;
	font-size: 13px;
	color: #ffffff;

	background-color: #49f;
	background-image: linear-gradient(#9df,#24f);	
	text-shadow: 0 1px 0 #000;
	border-width: 1px;
	border-style: solid;
	border-color: rgba(130,150,250,.7)rgba(255,255,255,.15)#0049ad;

	border-radius: 5px;
	background-position: left center;
	background-repeat: no-repeat;
}

#dialogueButton
{
	z-index: 100;
	width:82px;
	height:44px;
	position: absolute;
	left:0;
	top:0;
}

#dialogueButton a
{
	display: block;
	width:82px;
	height:44px;
}

#tracklist
{
	position:absolute;
	background-repeat: no-repeat;
	background-position: center center;
	width: 300px;
	height: 458px;
	top: 46px;
	left: 0px;
	background-color: #333;
	overflow-y: scroll;
	overflow-x: hidden;
	color: #ddd;
}

.tracklist__item
{
	position: relative;
	border-top: 1px solid #555;
	border-radius: 5px;
	margin: 0px;
	background-repeat: no-repeat;
	background-color: #333;
	background-position: 0 0;
	background-size: 23px 23px;
	height:23px;
	line-height:23px;
	font-size: 12px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.playlistDiv
{
	background-color: #336;
	padding: 0px 29px 0px 29px;
}
.trackDiv
{
	background-color: #333;
	padding: 0px 6px 0px 29px;
}

.playlistDiv:hover
{
	background-color: #225;
}
.trackDiv:hover
{
	background-color: #222;
}

.scrollable::-webkit-scrollbar
{
	width:16px;
	height:16px;
}
.scrollable::-webkit-scrollbar-button:start:decrement,.scrollable::-webkit-scrollbar-button:end:increment{display:block;height:0;background-color:transparent;}
.scrollable::-webkit-scrollbar-track-piece{background-color:rgba(0,0,0,0);-webkit-border-radius:0;}
.scrollable::-webkit-scrollbar-thumb:vertical{height:50px;background-color:#999;-webkit-border-radius:8px;}
.scrollable::-webkit-scrollbar-thumb:horizontal{width:50px;background-color:#999;-webkit-border-radius:8px;}

.expandButton
{
	position: absolute;
	width : 23px;
	height: 23px;
	background-color: rgba(255,255,255,0.1);
	background-size: 24px 24px;
	right: 0px;
	top: 0px;
	cursor: pointer;
}

.scss_button
{
	line-height: 44px;
	font-size: 18px;
	text-align: center;
	background-color: rgb(255,72,0);
	background-image: linear-gradient(#f70,#f30);	
	height:44px;
	color: #fff;
	text-shadow: 0 1px 0 #000;
	position: absolute;
	border-width: 1px;
	border-style: solid;
	border-color: rgba(173,73,0,.7)rgba(255,255,255,.15)#ad4900;
	cursor: pointer;
}

.scss_button:hover
{
	background-image: none;
}

#downloadButton
{
	left:0px;
	width:300px;
	top:504px;
}

